feat: use MediaElement.js to style audio player

--- a/less/styles.less
+++ b/less/styles.less
@@ -124,3 +124,7 @@
     height: inherit;
     background-color: @color-primary-0;
 }
+
+.mejs__controls {
+    background: @color-primary-0 !important;
+}
